Ass-1/getting_started/test_files/valid/test1.cpm
{  volatile result : float := ( (2 ^ (4 * 2) + 10 - 2 * 6 + 1.0 / 4.0) * 2 )
  print(result)
  return 0
}