Ass-1/getting_started/test_files/syntax_errors/UnmatchedParentheses.cpm
class UnmatchedParentheses {

  test(): void {
    result := (10 * (5 + 3)
    //@error - syntax (unmatched parentheses in expression)
    print(result)
  }

}

main() : int {
  print(UnmatchedParentheses().test())
  return 0
}